--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@types/jest": "^24.9.1",
     "@types/node": "^12.20.18",
     "@types/ramda": "^0.27.44",
-    "@types/react": "^16.14.11",
-    "@types/react-dom": "^16.9.14",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.26",
@@ -25,8 +25,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
+    "sass": "^1.57.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.3.5"
   },
