--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "@typescript-eslint/parser": "^4.28.5",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-tsdoc": "^0.2.17",
     "pre-commit": "^1.2.2",
     "prettier": "^2.3.2"
   },
